--- a/LenSch/LenSch.csproj
+++ b/LenSch/LenSch.csproj
@@ -65,6 +65,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Base.cs" />
+    <Compile Include="Partialservice.cs" />
     <Compile Include="Client.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
