--- a/LenSch/LenSch.csproj
+++ b/LenSch/LenSch.csproj
@@ -65,6 +65,15 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Base.cs" />
+    <Compile Include="Pages\AddUp.xaml.cs">
+      <DependentUpon>AddUp.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\AddZap.xaml.cs">
+      <DependentUpon>AddZap.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\BlZap.xaml.cs">
+      <DependentUpon>BlZap.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Partialservice.cs" />
     <Compile Include="Client.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -90,6 +99,7 @@
     <Compile Include="Pages\ShowListService.xaml.cs">
       <DependentUpon>ShowListService.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PartialZap.cs" />
     <Compile Include="Product.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -120,6 +130,18 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\AddUp.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\AddZap.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\BlZap.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\ShowListService.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
